# qmato

./: CMakeLists.txt  ReadMe.md
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  settingswidget.cpp  settingswidget.hpp  settingswidget.ui  task.cpp  task.hpp  taskdb.cpp  taskdb.hpp  tasktablemodel.cpp  tasktablemodel.hpp  taskwidget.cpp  taskwidget.hpp  taskwidget.ui  timedisplaywidget.cpp  timedisplaywidget.hpp  timerwidget.cpp  timerwidget.hpp  timerwidget.ui  tomatotimer.cpp  tomatotimer.hpp
src/resources/: resources.qrc
src/resources/audio/: ReadMe.md
test/: CMakeLists.txt
